# PublicDataReader-KOSIS

./: .env.example  .gitignore  Buy.ipynb  CLAUDE.md  KB.ipynb  KB부동산.ipynb  README.md  lawd_code.csv  main.py  pyproject.toml  분양권+입주권.ipynb
PublicData/: 미분양.ipynb  미분양_종합.ipynb  준공_후_미분양.ipynb  준공_후_미분양.py
csv/: 미분양_종합.csv
미분양/: 미분양.ipynb  미분양.py  미분양_종합.ipynb  미분양_종합.py  미분양현황_피벗_전체기간_최종.csv  준공_후_미분양.ipynb  준공_후_미분양.py  준공_후_미분양_피벗_전체기간_최종.csv
인허가/: 인허가.ipynb  인허가.py  인허가실적_피벗_전체기간_최종.csv
준공/: 준공.ipynb  준공.py  준공실적_피벗_전체기간_최종.csv
착공/: 착공.ipynb  착공.py  착공실적_피벗_전체기간_최종.csv
